--- a/app/src/main/res/layout/fragment_detalle_artefacto.xml
+++ b/app/src/main/res/layout/fragment_detalle_artefacto.xml
@@ -19,6 +19,16 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
+    <CheckBox
+        android:id="@+id/cbDisponible_DArtefacto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/guideline1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
         app:layout_constraintGuide_begin="75dp"
