--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,6 +58,16 @@
         app:layout_constraintTop_toBottomOf="@+id/tvRol_H" />
 
     <Button
+        android:id="@+id/btEditar_H"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Editar perfil"
+        app:layout_constraintBottom_toTopOf="@+id/btCerrar_H"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/btCerrar_H"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
